# Tactics

./: CMakeLists.txt  Makefile  UML.dio
include/: Colors.h  Game.h  PieceEnum.h  TeamEnum.h
include/board/: Tile.h
include/card/: Card.h  CardPool.h
include/client/: Client.h  Client.hpp
include/client/event/: PacketHandler.h  PacketHandler.hpp
include/client/event/interface/: IEventListener.h
include/client/gui/: TestScreen.cpp  TestScreen.h
include/common/: Common.hpp  PieceType.h  TeamType.h
include/common/event/: PacketHandler.hpp
include/common/gui/: MainWindow.h  TextureManager.h
include/common/gui/bindings/: UIBinder.h
include/common/gui/components/: Image.h  Label.h  button.h  panel.h
include/common/gui/components/base/: UIComponent.h
include/common/gui/enums/: TeamEnum.h  TroopEnum.h
include/common/gui/layouts/: UILayout.h
include/common/gui/screens/: Screen.h
include/common/ui/: MainWindow.h  Screen.h  UIFactory.h  Window.h
include/common/ui/components/: Button.h  GridPanel.h  Image.h  Label.h  Notification.h  Panel.h  StackPanel.h  Tooltip.h
include/common/ui/components/base/: UIComponent.h
include/common/ui/components/interfaces/: BaseComponent.h  IClickable.h  IContainer.h  IHittable.h  IPanel.h  IRenderable.h  UIComponent.h
include/common/ui/components/options/: CommonOps.h  ImageOps.h
include/common/ui/layouts/: FreeLayout.h  GridLayout.h  HorizontalLayout.h  VerticalLayout.h
include/common/ui/layouts/interface/: UILayout.h
include/common/ui/layouts/interfaces/: UILayout.h
include/common/ui/managers/: TextureManager.h
include/common/ui/screens/: Screen.h
include/common/utils/: UUID.h
include/game/board/: Board.h  Tile.h
include/gameStrategy/: GameSettings.h  TeamMode.h
include/gameStrategy/interface/: ITeamMode.h
include/piece/: Piece.h
include/piece/interface/: IAction.h
include/player/: Hand.h  Player.h
include/player/interface/: IStats.h
include/role/: Player.h  User.h
include/server/: Server.h  Server.hpp
include/server/board/: Board.h  Tile.h
include/server/connection/: PacketHandler.h  Server.h
include/server/connection/interface/: IClientEvent.h
include/server/event/: EventManager.h  PacketHandler.h  PacketHandler.hpp
include/server/event/interface/: IEventListener.h  IListener.h
include/server/game/: ActionProcessor.h  Game.h  GameProcessor.h  GameSetup.h  TurnManager.h
include/server/game/board/: Board.h  Board_old.h  Tile.h
include/server/game/core/: Game.h  GameConfig.h  GameData.h  GameMediator.h  TurnController.h
include/server/game/core/interface/: IBoardData.h  IBoardMedi.h  IBoardOps.h  IClientData.h  IClientMedi.h  IGameData.h  IGameMedi.h  IGameOps.h  IPlayerData.h  IPlayerMedi.h  IPlayerOps.h  ITurnOps.h
include/server/game/enums/: CardEnum.h  PieceType.h  Team.h  TeamEnum.h  TroopEnum.h
include/server/game/manager/: BoardManager.h  ClientManager.h  PlayerManager.h  TurnManager.h
include/server/game/manager/interface/: IClientOps.h
include/server/game/object/: Board.h  Card.h  Player.h
include/server/game/object/board/: Board.h  Tile.h
include/server/game/object/card/: Card.h
include/server/game/object/player/: Deck.h  Hand.h  Player.h  Stamina.h
include/server/game/object/troop/: Troop.h  TroopCommand.h  TroopFactory.h
include/server/game/objects/board/: Board.h
include/server/game/objects/card/: CardFactory.h
include/server/game/objects/player/: Deck.h  Hand.h  Player.h
include/server/game/objects/troop/: Troop.h  TroopCommand.h  TroopFactory.h
include/server/game/piece/: Action.h  ActionCommand.h  Piece.h  PieceFactory.h
include/server/game/piece/interface/: IActionStrategy.h
include/server/game/player/: Player.h  Stamina.h
include/server/game/troop/action/: EatCheese.h
include/server/game/utils/: ValueStatus.h
include/server/gui/: ConsoleWindow.h
include/server/piece/: BeforeTurnAction.h
include/server/piece/base/: IPiece.h
include/server/player/: Stamina.h
include/server/player/base/: BaseListStat.h  BaseValueStat.h
include/test/ui/screens/: TestScreen.h
include/test/ui/widgets/: BoardUI.h  TileUI.h
src/: board.cpp  main.cpp
src/client/: Client.cpp  ClientMain.cpp  main.cpp
src/client/connection/: Client.cpp  Client.h  PacketHandler.cpp  PacketHandler.h
src/client/event/: PacketHandler.cpp
src/client/gui/: MainWindow.cpp  MainWindow.h  TestScreen.h
src/client/gui/components/: button.h
src/client/gui/components/base/: UIComponent.h
src/client/gui/screen/: TestScreen.cpp  TestScreen.h
src/client/gui/screen/base/: Screen.h
src/connect/: Client.cpp  Server.cpp
src/game/: Game.cpp  Party.cpp  PieceFactory.cpp
src/server/: Server.cpp  ServerMain.cpp  main.cpp
src/server/connection/: PacketHandler.cpp  Server.cpp  Server.h
src/server/event/: EventManager.cpp  PacketHandler.cpp
src/server/game/: Game.cpp  Game.h  GameProcessor.cpp  GameSettings.h  GameSetup.cpp
src/server/game/board/: Board.cpp  Board.h  Tile.cpp  Tile.h
src/server/game/card/: Card.cpp  Card.h  CardSimpleFactory.cpp  CardSimpleFactory.h  Deck.cpp  Deck.h
src/server/game/core/: Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  GameData.cpp  GameMediator.cpp  GameMediator.h  TurnController.cpp
src/server/game/enums/: CardEnum.h  TroopEnum.h
src/server/game/manager/: BoardManager.cpp  BoardManager.h  ClientManager.cpp  ClientManager.h  GameProcessor.cpp  PlayerManager.cpp  PlayerManager.h  TurnManager.cpp  TurnManager.h
src/server/game/object/board/: Board.cpp  Tile.cpp
src/server/game/object/card/: Card.cpp  CardFactory.cpp
src/server/game/piece/: Action.cpp  Action.h  Piece.cpp  Piece.h
src/server/game/player/: Hand.cpp  Hand.h  Player.cpp  Player.h  Stamina.cpp  Stamina.h
src/server/game/troop/: Troop.h  TroopCommand.h  TroopFactory.h
src/server/game/utils/: Timer.h
src/server/gui/: ConsoleWindow.cpp  ConsoleWindow.h
src/test/: main.cpp
src/test/ui/: ComponentFactory.cpp  ComponentFactory.h
src/test/ui/screens/: TestScreen.cpp  TestScreen.h
src/test/ui/widgets/: TileUI.cpp
(+24 files in other folders)
